Commit all local changes before force pushing

--- a/scenario/lora/config.json
+++ b/scenario/lora/config.json
@@ -1,25 +1,23 @@
 {
-
     "--instance_prompt": "{project_name}",
     "--tracker_project_name": "{project_name}",
     "--tracker_run_name": "{naming_preset}",
     "--user_prompt_library": "config/{naming_preset}/user_prompt_library.json",
     "--data_backend_config": "config/{naming_preset}/multidatabackend.json",
     "--output_dir": "output/{project_name}/{naming_preset}",
-
     "--webhook_config": "webhooks/1.json",
     "--model_type": "lora",
-    "--flux_lora_target": "all+ffs",
+    "--flux_lora_target": "all",
     "--optimizer": "adamw_bf16",
     "--lr_scheduler": "constant",
     "--learning_rate": 0.0001,
     "--train_batch_size": 1,
-    "--lora_rank": 16,
-    "--max_train_steps": 3000,
-    "--checkpointing_steps": 200,
+    "--lora_rank": 32,
+    "--max_train_steps": 4000,
+    "--checkpointing_steps": 400,
     "--resume_from_checkpoint": "latest",
-    "--checkpoints_total_limit": 15,
-    "--lr_warmup_steps": 0,
+    "--checkpoints_total_limit": 8,
+    "--lr_warmup_steps": 100,
     "--report_to": "wandb",
     "--ema_device": "accelerator",
     "--push_to_hub": false,
@@ -31,16 +29,16 @@
     "--gradient_checkpointing": true,
     "--allow_tf32": true,
     "--snr_gamma": 5,
-    "--validation_steps": 100,
-    "--validation_num_inference_steps": 25,
-    "--validation_seed": 777,
-    "--validation_guidance": 3.5,
+    "--validation_steps": 200,
+    "--validation_num_inference_steps": 20,
+    "--validation_seed": 1234,
+    "--validation_guidance": 2.5,
     "--validation_guidance_real": 1.0,
     "--validation_guidance_rescale": 0.0,
     "--validation_negative_prompt": "blurry, cropped, ugly",
     "--caption_dropout_probability": 0.001,
     "--validation_no_cfg_until_timestep": 2,
-    "--validation_resolution": "1024x1280",
+    "--validation_resolution": "832x1216",
     "--seed": 8847392,
     "--pretrained_model_name_or_path": "/workspace/flux-diffusers",
     "--metadata_update_interval": 65,
@@ -65,7 +63,7 @@
     "--training_scheduler_timestep_spacing": "trailing",
     "--inference_scheduler_timestep_spacing": "trailing",
     "--disable_benchmark": "false",
-    "--use_ema": true,
+    "--use_ema": false,
     "--ema_decay": 0.9999,
     "--ema_update_interval": 1
 
